# pretty-der6y

./: .cspell.json  .gitattribute  .gitignore  Cargo.toml  README.md  cross-compile-shell.nix  flake.nix  shell.nix
.github/workflows/: daily.yml  lint.yml  release-android.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
data/: default_routine.csv
lib/: Cargo.toml
lib/assets/: routine.csv
lib/src/: lib.rs  routine.rs  security.rs
server/: Cargo.toml
server/assets/: map.geojson
server/src/: main.rs
src/: account.rs  main.rs  pretty_logger.rs  pretty_tui.rs
src/account/: routine.rs
src/helpers/: bindings.ts
tauri-app/: biome.json  bun.lockb  default.nix  disable_updater.patch  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  uno.config.ts  vite.config.ts
tauri-app/src/: App.tsx  Components.tsx  Login.tsx  Main.tsx  index.tsx
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json  desktop.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/components/: Button.tsx  DatePicker.tsx  Icon.tsx  Input.tsx  LeafletMap.tsx  Logger.tsx  Map.tsx  Popover.tsx  Scrollbar.tsx  Skeleton.tsx  Slider.tsx  TimePicker.tsx  TittleBar.tsx  Uploader.tsx
tauri-app/src/derictives/: clickOut.tsx
tauri-app/src/directives/: clickOut.tsx
tauri-app/src/helpers/: isDef.ts
tauri-app/src/layouts/: TwoColumn.tsx
web/: Cargo.toml  index.html  package-lock.json  preview.html
web/src/: components.rs  logger.rs  main.rs
web/style/: tailwind.css
