[package]
name = "pretty-derby"
authors = ["Phie Ash"]
description = "Hachimi hachimi hachimi~"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = "0.26.1"
csv = "1.2.1"
format = "0.2.4"
geo = "0.24.1"
hex = "0.4.3"
json = "0.12.4"
log = { version = "0.4.17", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
rpassword = "7.2.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha1 = "0.10.5"
tokio = { version = "1.27.0", features = ["full"] }
tui = "0.19.0"
wkt = "0.10.3"

[profile.release.package.geo]
opt-level = 0
