[package]
name = "pretty-derby"
authors = ["Phie Ash"]
description = "Hachimi hachimi hachimi~"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive"] }
clap_complete = "4.5.1"
crossterm = "0.27.0"
csv = "1.2.2"
format = "0.2.4"
geo = "0.28.0"
hex = "0.4.3"
json = "0.12.4"
log = { version = "0.4.20", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = [
  "json",
  "blocking",
  "rustls-tls",
], default-features = false }
rpassword = "7.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sha1 = "0.10.5"
tokio = { version = "1.32.0", features = ["full"] }
tui = "0.19.0"
wkt = "0.10.3"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
debug = false # Disable debug assertions
