[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Hachimi hachimi hachimi~"
authors = ["Fay Ash"]
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
lib = { version = "0.2.0", path = "../lib" }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
