[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
geo = "0.28.0"
geojson = "0.24.1"
hex = "0.4.3"
log = { version = "0.4.22", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha1 = "0.10.6"
urlencoding = "2.1.3"
wkt = "0.11.0"
