[package]
name = "lib"
authors = ["Fay Ash"]
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.38"
const_format = "0.2.33"
derive_builder = "0.20.1"
ecb = "0.1.2"
geo = "0.28.0"
geojson = "0.24.1"
hex = "0.4.3"
log = { version = "0.4.22", features = ["std"] }
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha1 = "0.10.6"
tokio = { version = "1.40.0", features = ["macros"] }
