[package]
name = "pretty-der6y"
version = "1.1.4"
description = "Hachimi hachimi hachimi~"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
lib = { version = "0.1.0", path = "../../lib" }
chrono = "0.4.38"
serde = "1.0.209"
serde_json = "1.0.127"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc"
